{
    "name": "InputControls",
    "maps": [
        {
            "name": "Touch",
            "id": "0a0bc45e-4d7b-482d-ba51-a11cd54ad0fc",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "fa2283b3-372a-4089-9b08-56c34a705a38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "5b3e2ad5-9336-478f-960a-4cdf53508f49",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "570ab61d-0067-4c94-8c0d-2afa4dfcbd40",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98fe45b7-b152-45fd-903c-10c70ef4b62e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}